gcc/ 	PR target/27387 	* arm.c (arm_output_mi_thunk): Use pc-relative addressing when 	-mthumb -fPIC are used.

testsuite/
	PR target/27387
	* gcc.target/arm/arm.exp: New.
	* gcc.target/arm/pr27387.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113467 138bc75d-0d04-0410-961f-82ee72b054a4